# wasm-game-rs

./: Cargo.toml  README.md  index.html  package.json
src/: error.rs  main.rs  universe.rs
tests/: web.rs
