[package]
name = "wasm-life-rs"
version = "0.0.0"
authors = ["amiller68 <alexanderscottmiller@gmail.com>"]
edition = "2021"

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "^0.1", optional = true }
wasm-bindgen = "^0.2"
leptos = { version = "^0.5", features = ["csr", "nightly"] }
js-sys = "^0.3"
fixedbitset = "^0.4"
leptos-use = { version = "^0.7", features = ["docs", "math"] }
random_color = { version = "^0.6", features = ["wasm-bindgen"] }
styled = "0.1.41"
stylist = "0.13.0"
stylers = "0.3.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "CanvasRenderingContext2d",
  "Window",
  "DomRect", 
  "Element",
  "HtmlCanvasElement",
  "HtmlButtonElement"
]


[dev-dependencies]
wasm-bindgen-test = "^0.3"

[profile.release]
pt-level = "s"
